@@ -4,6 +4,8 @@ Revision history for Ocsinventory::Agent
        * Add new fields in setSnmpLoadBalancer() method in Common.pm
 
 2.0.x
+       * Use the "public" SNMP community if no community defined in OCS server configuration
+       * Various bug fixes in Snmp.pm
        * New 2.0 MacOSX integration
        * Bug #798428 about standalone agent building
        * Change variable names to lowercase in Snmp/3375.pm
